--- a/.github/workflows/main-deploy-nuxt.yml
+++ b/.github/workflows/main-deploy-nuxt.yml
@@ -1,11 +1,21 @@
-- name: Nuxt3 to Github Pages
-# You may pin to the exact commit or the version.
-uses: khanshifaul/NuxtPagesAction@0.0.3
-with:
-    username: D2theR 
-    reponame: D2theR
-    token: ${{ secrets.NUXT_KEY }}
-    # Your custom domain
-    # cname: # optional, default is none
-    # Use yarn to build
-    useyarn: true
+name: Nuxt3 to Github Pages
+on: 
+  push:
+    branches: [main]
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18 # Adjust as needed
+      - run: npm install # Or 'yarn install' if useyarn is true
+      - run: nuxt generate
+      - name: Deploy
+        uses: khanshifaul/NuxtPagesAction@0.0.3
+        with:
+          username: D2theR 
+          reponame: D2theR
+          token: ${{ secrets.NUXT_KEY }}
+          useyarn: true
