--- a/.github/workflows/main-deploy-nuxt.yml
+++ b/.github/workflows/main-deploy-nuxt.yml
@@ -11,7 +11,7 @@ jobs:
         with:
           node-version: 20  # Adjust as needed
       - run: cd d2ther && yarn install # Or 'yarn install' if useyarn is true
-      - run: nuxt generate
+      - run: npx nuxi generate
       - name: Deploy
         uses: khanshifaul/NuxtPagesAction@0.0.3
         with:
