--- a/.github/workflows/main-deploy-nuxt.yml
+++ b/.github/workflows/main-deploy-nuxt.yml
@@ -10,7 +10,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 20  # Adjust as needed
-      - run: cd d2ther && yarn install # Or 'yarn install' if useyarn is true
+      - run: cd d2ther/ 
+      - run: yarn install # Or 'yarn install' if useyarn is true
       - run: npx nuxi generate
       - name: Deploy
         uses: khanshifaul/NuxtPagesAction@0.0.3
