--- a/.github/workflows/main-deploy-nuxt.yml
+++ b/.github/workflows/main-deploy-nuxt.yml
@@ -9,8 +9,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 20  # Adjust as needed
-      - run: cd d2ther/ 
+          node-version: 20  # Adjust as needed 
+          working-directory: ./d2ther
       # - run: yarn install # Or 'yarn install' if useyarn is true
       # - run: npx nuxi generate
       - name: Deploy
