--- a/.github/workflows/main-deploy-nuxt.yml
+++ b/.github/workflows/main-deploy-nuxt.yml
@@ -9,14 +9,12 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 20  # Adjust as needed 
-          
-      # - run: yarn install # Or 'yarn install' if useyarn is true
-      # - run: npx nuxi generate
+          node-version: 20  # Adjust as needed
+      - name: Working Dir
+        run: pwd
       - name: Deploy
         uses: khanshifaul/NuxtPagesAction@0.0.3
         with:
-          working-directory: ./d2ther
           useyarn: true
           username: D2theR 
           reponame: D2theR
