--- a/.github/workflows/main-deploy-nuxt.yml
+++ b/.github/workflows/main-deploy-nuxt.yml
@@ -10,10 +10,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 20  # Adjust as needed
-      - name: Working Dir
-        run: |
-          pwd
-          ls -a
+      - name: Change Working Dir
+        working-directory: ./d2ther
       - name: Deploy
         uses: khanshifaul/NuxtPagesAction@0.0.3
         with:
