--- a/.github/workflows/main-deploy-nuxt.yml
+++ b/.github/workflows/main-deploy-nuxt.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 20  # Adjust as needed
-      - name: Change Working Dir
+      - name: Change Working Directory
         working-directory: ./d2ther
       - name: Deploy
         uses: khanshifaul/NuxtPagesAction@0.0.3
