--- a/.github/workflows/main-deploy-nuxt.yml
+++ b/.github/workflows/main-deploy-nuxt.yml
@@ -17,7 +17,7 @@ jobs:
         uses: D2theR/NuxtPagesAction@main
         with:
           useyarn: true
-          preruncmd: "ls -a"
+          cwd: "./d2ther"
           username: D2theR 
           reponame: D2theR
           token: ${{ secrets.NUXT_KEY }}
