--- a/.github/workflows/main-deploy-nuxt.yml
+++ b/.github/workflows/main-deploy-nuxt.yml
@@ -14,7 +14,7 @@ jobs:
         uses: D2theR/NuxtPagesAction@main
         with:
           useyarn: true
-          cwd: "./d2ther"
+          cwd: ./d2ther
           username: D2theR 
           reponame: D2theR
           token: ${{ secrets.NUXT_KEY }}
