--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@nuxt/ui": "^3.1.3",
     "@pinia/nuxt": "^0.5.1",
+    "@nuxtjs/color-mode": "^3.5.2",
     "autoprefixer": "^10.4.19",
     "nuxt": "^3.17.5",
     "postcss": "^8.4.38",
